# jack

./: .gitignore  CMakeLists.txt  hello.jack  jack  jack_debug  out.ll  shell.nix  std.jack  valgrind.txt  x  x.c
lib/: libc.jack  std.jack
src/: ast.c  ast.h  cli.c  cli.h  collection.c  collection.h  error.c  error.h  gc.c  gc.h  lexer.c  lexer.h  llvm_codegen.c  llvm_codegen.h  main.c  mangler.c  mangler.h  optimizer.c  optimizer.h  parser.c  parser.h  span.c  span.h  string.c  string.h  type.c  type.h
